--- a/step3_ml_models.ipynb
+++ b/step3_ml_models.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 85,
    "id": "56aadd6a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 86,
    "id": "70eb4f38",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "9  2024    215560.0  56105.849057      78.750000"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 87,
    "id": "8bc2c3d9",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 88,
    "id": "dc2f4994",
    "metadata": {},
    "outputs": [
@@ -223,12 +223,13 @@
     "plt.figure(figsize=(6,4))\n",
     "sns.regplot(x=\"AI_Popularity\", y=\"Employment\", data=df,ci=None)\n",
     "plt.title(\"AI Popularity vs Employment (Simple Linear Regression)\")\n",
+    "plt.savefig(\"AI_vs_emp_linear_reg.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 89,
    "id": "6cefc42f",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 90,
    "id": "8204da7e",
    "metadata": {},
    "outputs": [
@@ -280,12 +281,14 @@
     "plt.figure(figsize=(6,4))\n",
     "sns.regplot(x=\"AI_Popularity\", y=\"Median_Wage\", data=df, ci=None)\n",
     "plt.title(\"AI Popularity vs Median Wage (Simple Linear Regression)\")\n",
-    "plt.show()\n"
+    "plt.savefig(\"AI_vs_wage_linear_reg.png\")\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 91,
    "id": "6ec42cca",
    "metadata": {},
    "outputs": [
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 92,
    "id": "1388c13d",
    "metadata": {},
    "outputs": [
@@ -345,12 +348,13 @@
     "plt.ylabel(\"Predicted Employment\")\n",
     "plt.title(\"Multiple Linear Regression: Actual vs Predicted (Employment)\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Actual_vs_Predicted_emp_multreg.png\")\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 93,
    "id": "fca3c7d0",
    "metadata": {},
    "outputs": [
@@ -383,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 94,
    "id": "548e9d61",
    "metadata": {},
    "outputs": [
@@ -409,12 +413,13 @@
     "plt.ylabel(\"Predicted Median Wage\")\n",
     "plt.title(\"Multiple Linear Regression: Actual vs Predicted (Wage)\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Actual_vs_Predicted_wage_multreg.png\")\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 95,
    "id": "eb3948cd",
    "metadata": {},
    "outputs": [],
@@ -426,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 96,
    "id": "9e99f821",
    "metadata": {},
    "outputs": [],
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 97,
    "id": "4df401ba",
    "metadata": {},
    "outputs": [
@@ -507,7 +512,7 @@
        "AI_Popularity  0.672231 -0.164233"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 98,
    "id": "6adce03d",
    "metadata": {},
    "outputs": [
@@ -562,6 +567,7 @@
     ")\n",
     "plt.title(\"PCA of Employment, Wage, and AI Popularity\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Emp_wage_ai_PCA.png\")\n",
     "plt.show()\n"
    ]
   }
